--- a/.github/workflows/bats_test.yml
+++ b/.github/workflows/bats_test.yml
@@ -1,6 +1,4 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
+name: test suite
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -10,25 +8,21 @@ on:
   pull_request:
     branches: [ master ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   test:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - name: Install bats
       run: |
         sudo add-apt-repository ppa:duggan/bats
         sudo apt-get update
         sudo apt-get install bats
-        
+
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
     - name: Run tests
       run: |
         cd $GITHUB_WORKSPACE
+        git submodule update --init
         bats test
