build: skip self-shellcheck on github

--- a/.github/workflows/bats_test.yml
+++ b/.github/workflows/bats_test.yml
@@ -1,4 +1,4 @@
-name: test suite
+name: tests
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -21,7 +21,9 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    - name: Run tests
+    - name: bats
+      env:
+        RUNNING_IN_CI: 1
       run: |
         cd $GITHUB_WORKSPACE
         git submodule update --init
