build: add timeouts

--- a/.github/workflows/bats_test.yml
+++ b/.github/workflows/bats_test.yml
@@ -1,4 +1,4 @@
-name: tests
+name: test
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -9,10 +9,12 @@ on:
     branches: [ master ]
 
 jobs:
-  test:
+  bats:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
     - name: Install bats
+      timeout-minutes: 3
       run: |
         sudo add-apt-repository ppa:duggan/bats
         sudo apt-get update
@@ -20,6 +22,7 @@ jobs:
 
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+      timeout-minutes: 1
 
     - name: bats
       env:
